// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-0" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            minChunks: 2,

            cacheGroups: {
                common: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'common'
                },

                vendor: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'vendor',
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-1" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                common: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'common'
                },

                vendor: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'vendor',
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-2" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                vendor: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'vendor',
                    test: '/node_modules/'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-3" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            cacheGroups: {
                commons: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'commons'
                }
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-4" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            minSize: 0,
            minChunks: 2,

            cacheGroups: {
                main: {
                    chunks: 'initial',
                    enforce: true,
                    name: 'main'
                },

                chunks: 'initial',
                enforce: true,
                name: true
            }
        }
    }
}
"
`;

exports[`commonsChunkPlugin transforms correctly using "commonsChunkPlugin-5" data 1`] = `
"module.export = {
    optimizations: {
        splitChunks: {
            runtimeChunk: true
        }
    }
}
"
`;
